Make the gh search api sort param configurable